[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "caldav2pal"
description = "A FLOSS utility to convert CalDAV/CardDAV to pal"
version = "0.0.0"
authors = [
	{ name = 'Sven "DrMcCoy" Hesse', email = "drmccoy@drmccoy.de" }
]
readme = "README.md"
license = { file = "COPYING" }
classifiers = [
	"Private :: Do No Upload",
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: GNU Affero General Public License v3.0 or later (AGPL-3.0-or-later)",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.11",
	"Topic :: Office/Business :: Scheduling",
	"Typing :: Typed"
]
keywords = [ "caldav", "carddav", "pal", "calendar", "birthdays" ]
requires-python = ">=3.11"
dependencies = [
	"xdg",
	"requests",
	"vobject",
	"recurring_ical_events"
]

[project.optional-dependencies]
dev = [
	"types-setuptools",
	"types-requests",
	"types-python-dateutil",
	"types-vobject",
	"isort",
	"autopep8",
	"flake8",
	"mypy",
	"pylint"
]

[project.urls]
homepage = "https://github.com/DrMcCoy/caldav2pal"

[project.scripts]
caldav2pal = "caldav2pal:main"
